<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/lgiTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/messenger"
        android:textColor="#673AB7"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/lgiPassEdTx"
        app:layout_constraintStart_toStartOf="@+id/lgiPassEdTx"
        app:layout_constraintTop_toBottomOf="@+id/lgiPassEdTx" />

    <EditText
        android:id="@+id/lgiEmailEdTx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/lgiTitle"
        app:layout_constraintStart_toStartOf="@+id/lgiTitle"
        app:layout_constraintTop_toBottomOf="@+id/lgiTitle" />

    <EditText
        android:id="@+id/lgiPassEdTx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/lgiEmailEdTx"
        app:layout_constraintStart_toStartOf="@+id/lgiEmailEdTx"
        app:layout_constraintTop_toBottomOf="@+id/lgiEmailEdTx" />

    <TextView
        android:id="@+id/forgotTvBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <TextView
        android:id="@+id/registerTvBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />
</androidx.constraintlayout.widget.ConstraintLayout>